<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/logo_view" />

    <RelativeLayout
        android:id="@+id/mode_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonRect"
                android:id="@+id/window_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_show_window"
                android:textStyle="bold" />

            <Button
                style="@style/ButtonRect"
                android:id="@+id/fragment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_show_fragment"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
    <TextView
        android:id="@+id/information_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        app:layout_constraintTop_toBottomOf="@id/mode_buttons"/>

    <Button
        android:id="@+id/logout_button"
        style="@style/ButtonNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_logout"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/app_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:id="@+id/app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/InfoLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_sdk_version" />

            <TextView
                android:id="@+id/tv_sdk"
                style="@style/InfoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/InfoLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_account" />

            <TextView
                android:id="@+id/tv_account"
                style="@style/InfoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/InfoLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_name" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/InfoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>